# sequoia

./: .env.default  .gitignore  PYTORCH3D_INSTALL.md  README.md  finalBlenderSkript.blend  main.py  mesh_eval_results.csv  pixel2meshpp_camera.txt  pollen.blend1  pyproject.toml  random_render.py  requirements.txt  train_pixelnerf.sbatch  train_sparsefusion.sbatch
Eval/: README.md  finish.txt
InstantMesh/: requirements.txt
Nerf/: MeshExtraction.ipynb  Nerf-reconstruction copy.ipynb  Nerf-reconstruction.ipynb  dataset.py  ml_helpers.py  model_nerf  model_nerf_backup  recon.ipynb  rendering.py
Nerf - Copy/: MeshExtraction.ipynb  Nerf-reconstruction.ipynb  Nerf.ipynb  dataset.py  dataset_org.py  ml_helpers.py  model_nerf  model_nerf2  model_nerf3  model_nerf5  model_nerf_21602  model_nerf_30  model_nerf_epoch1.pth  model_nerf_epoch10.pth  model_nerf_epoch2.pth  model_nerf_epoch3.pth  model_nerf_epoch4.pth  model_nerf_epoch5.pth  model_nerf_epoch6.pth  model_nerf_epoch7.pth  model_nerf_epoch8.pth  model_nerf_epoch9.pth
Pixel2Mesh/: dockerfile  requirments.txt
Pixel2MeshPlusPlus/: demo.py  dockerfile  generate_mvp2m_intermediate.py  test_mvp2m.py  test_p2mpp.py  to_pixel2mesh_dir_original_augments.py  train_mvp2m.py  train_p2mpp.py
Pixel2MeshPlusPlus2/: generate_mvp2m_intermediate.py  train_mvp2m.py  train_p2mpp.py
Pixel_Nerf/: expconf.conf  pyproject.toml
Shape_Net_Instant/: blender_interface.py  shapenet_spherical_renderer.py  util.py
Shape_Net_Pipeline/: shapenet_spherical_renderer_multi_core.py
SparseFusion/: dockerfile  requirements.txt
core/: train.py  (+3 more)
(+962 files in other folders)
