[project]
name = "sequoia"
version = "0.1.0"
description = "Genesis sequoia"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "manifold>=0.2.0",
    "manifold3d>=3.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyntcloud>=0.3.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trimesh>=4.6.4",
    "tqdm>=4.67.1",
    "vtk>=9.4.1",
    "webdriver-manager>=4.0.2",
]
